aequlibrium -- jumping header fix (?)

--- a/pages/aequilibrium/src/css/main.css
+++ b/pages/aequilibrium/src/css/main.css
@@ -624,10 +624,6 @@ video {
   margin: 0.5rem;
 }
 
-.m-10 {
-  margin: 2.5rem;
-}
-
 .mx-2 {
   margin-left: 0.5rem;
   margin-right: 0.5rem;
@@ -651,16 +647,6 @@ video {
 .my-auto {
   margin-top: auto;
   margin-bottom: auto;
-}
-
-.mx-5 {
-  margin-left: 1.25rem;
-  margin-right: 1.25rem;
-}
-
-.mx-10 {
-  margin-left: 2.5rem;
-  margin-right: 2.5rem;
 }
 
 .flex {
@@ -734,10 +720,6 @@ video {
 
 .w-full {
   width: 100%;
-}
-
-.min-w-48 {
-  min-width: 12rem;
 }
 
 .max-w-\[40px\] {
@@ -846,12 +828,6 @@ video {
   --tw-space-x-reverse: 0;
   margin-right: calc(2.5rem * var(--tw-space-x-reverse));
   margin-left: calc(2.5rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
-.space-x-5 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(1.25rem * var(--tw-space-x-reverse));
-  margin-left: calc(1.25rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
 .space-y-1 > :not([hidden]) ~ :not([hidden]) {
@@ -1195,22 +1171,16 @@ video {
     margin-right: 2.5rem;
   }
 
-  .max-sm\:mx-12 {
-    margin-left: 3rem;
-    margin-right: 3rem;
-  }
-
-  .max-sm\:mx-7 {
-    margin-left: 1.75rem;
-    margin-right: 1.75rem;
-  }
-
   .max-sm\:hidden {
     display: none;
   }
 
   .max-sm\:h-\[225px\] {
     height: 225px;
+  }
+
+  .max-sm\:min-h-screen {
+    min-height: 100vh;
   }
 
   .max-sm\:w-5\/6 {
@@ -1221,20 +1191,8 @@ video {
     width: 100%;
   }
 
-  .max-sm\:min-w-28 {
-    min-width: 7rem;
-  }
-
-  .max-sm\:min-w-14 {
-    min-width: 3.5rem;
-  }
-
   .max-sm\:min-w-5 {
     min-width: 1.25rem;
-  }
-
-  .max-sm\:basis-1\/3 {
-    flex-basis: 33.333333%;
   }
 
   .max-sm\:flex-col {
@@ -1297,10 +1255,6 @@ video {
 }
 
 @media (min-width: 640px) {
-  .sm\:m-10 {
-    margin: 2.5rem;
-  }
-
   .sm\:hidden {
     display: none;
   }
